@@ -1,11 +1,15 @@
 package org.sakaiproject.kernel.util;
 
-import static org.junit.Assert.*;
-
-import java.net.URL;
-import java.util.Enumeration;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 import org.junit.Test;
+
+import java.net.URI;
+import java.net.URL;
+import java.util.Enumeration;
 
 public class UrlEnumerationTest {
 
@@ -13,7 +17,7 @@ public class UrlEnumerationTest {
   public void testUrlEnumeration() throws Exception {
     Enumeration<URL> eu = new UrlEnumeration(new URL("http://example.com"));
     assertTrue(eu.hasMoreElements());
-    assertEquals(new URL("http://example.com"), eu.nextElement());
+    assertEquals(new URI("http://example.com"), eu.nextElement().toURI());
     assertFalse(eu.hasMoreElements());
     assertNull(eu.nextElement());
   }
